==> micropython/micropython/teensy/sdcard.c <==
#include "py/nlr.h"
#include "py/runtime.h"
#include "py/mphal.h"
#include "lib/fatfs/ff.h"
#include "extmod/fsusermount.h"
#include "sdcard.h"
#include "pin.h"
#include "genhdr/pins.h"
#include "bufhelper.h"
#include <stdio.h>
#include "sdhc.h"

void sdcard_init(void) {
    DSTATUS status = SDHC_InitCard();

    card_detected = (status == 0);

    printf("SDHC_Init returned %d\n", status);
}

uint64_t sdcard_get_capacity_in_bytes(void) {
    return SDHC_GetBlockCnt() * SDHC_BLOCK_SIZE;
}

mp_uint_t sdcard_read_blocks(uint8_t *dest, uint32_t block_num, uint32_t num_blocks) {
    SDHC_DMAWait();	// make sure uSD card is not busy
    DWORD res = SDHC_ReadBlocks(dest, block_num, num_blocks);
    if (res == RES_OK) {
        SDHC_DMAWait();
    }
    return res;
}

mp_uint_t sdcard_write_blocks(const uint8_t *src, uint32_t block_num, uint32_t num_blocks) {
    SDHC_DMAWait();	// make sure uSD card is not busy
    return SDHC_WriteBlocks((UCHAR *)src, block_num, num_blocks);
}

STATIC mp_obj_t sd_info(mp_obj_t self) {
    if (sdCardDesc.status) {
        return mp_const_none;
    }

    int cardType = 0;   // STD_CAPACITY_SD_CARD_V1_1 from stmhal
    if (sdCardDesc.highCapacity) {
        cardType = 2;   // HIGH_CAPACITY_SD_CARD from stmhal
    } else if (sdCardDesc.version2) {
        cardType = 1;   // STD_CAPACITY_SD_CARD_V2_0 from stmhal
    }

    mp_obj_t tuple[3] = {
        mp_obj_new_int_from_ull(SDHC_GetBlockCnt() * SDHC_BLOCK_SIZE),
        mp_obj_new_int_from_uint(SDHC_BLOCK_SIZE),
        mp_obj_new_int(cardType),
    };
    return mp_obj_new_tuple(3, tuple);
}
